# 1

build_rpi/: CMakeCache.txt  CaffeConfig.cmake  CaffeTargets.cmake  Makefile  caffe_1.0.0-6_arm64.deb  caffe_config.h  cmake_install.cmake  install_manifest.txt
build_rpi/cmake/: Uninstall.cmake
build_rpi/doc-pak/docs/: cmake_install.cmake
build_rpi/docs/: Makefile  cmake_install.cmake
build_rpi/examples/: Makefile  cmake_install.cmake
build_rpi/examples/cifar10/: convert_cifar_data
build_rpi/examples/cpp_classification/: classification
build_rpi/examples/mnist/: convert_mnist_data
build_rpi/examples/siamese/: convert_mnist_siamese_data
build_rpi/lib/: libcaffe.so.1.0.0
build_rpi/matlab/: Makefile  cmake_install.cmake
build_rpi/python/: Makefile  cmake_install.cmake
build_rpi/src/caffe/: Makefile  cmake_install.cmake
build_rpi/src/caffe/test/: Makefile  cmake_install.cmake
build_rpi/src/gtest/: Makefile  cmake_install.cmake
build_rpi/tools/: Makefile  caffe  cmake_install.cmake  compute_image_mean  convert_imageset  extract_features  upgrade_net_proto_binary  upgrade_net_proto_text  upgrade_solver_proto_text
python/: CMakeLists.txt  requirements.txt
src/caffe/: CMakeLists.txt
src/caffe/util/: io.cpp
